; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kernel_uuid_match.c_get_system_kernel_uuid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kernel_uuid_match.c_get_system_kernel_uuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"kern.uuid\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"sysctl kern.uuid\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"Parse running kernel uuid\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @get_system_kernel_uuid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_system_kernel_uuid(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* @MAX_LEN, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %3, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %4, align 8
  %11 = trunc i64 %8 to i32
  %12 = call i32 @memset(i8* %10, i32 0, i32 %11)
  store i64 %8, i64* %5, align 8
  %13 = call i32 @sysctlbyname(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %10, i64* %5, i32* null, i32 0)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @T_ASSERT_POSIX_SUCCESS(i32 %14, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* %2, align 4
  %17 = call i64 @uuid_parse(i8* %10, i32 %16)
  %18 = icmp eq i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @T_ASSERT_TRUE(i32 %19, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %21)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @sysctlbyname(i8*, i8*, i64*, i32*, i32) #2

declare dso_local i32 @T_ASSERT_POSIX_SUCCESS(i32, i8*) #2

declare dso_local i32 @T_ASSERT_TRUE(i32, i8*) #2

declare dso_local i64 @uuid_parse(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
